[package]
name = "gen-eli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
japanese_law_id = "0.1.1"
japanese_law_xml_schema = "5.2.0"
oxrdf = "0.3.1"
regex = "1.12.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
