[package]
name = "gen-eli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
japanese_law_id = { version = "0.1.1", features = ["serde"] }
japanese_law_xml_schema = "5.3.1"
oxrdf = "0.3.1"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
